charts/redis-stack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis-stack
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-insight
spec:
  selector:
    app: redis-stack
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
