charts/redis-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-insight
spec:
  ingressClassName: nginx
  rules:
  - host: "redis.alphavector.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: redis-insight
            port:
              number: 8001
